infra/config/openbao/Gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openbao
  namespace: openbao
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: openbao.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    name: openbao-https
    hostname: openbao.k8sdev.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: openbao-tls
    allowedRoutes:
      namespaces:
        from: Same
