infra/config/openbao/HTTPRoute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
  - name: openbao
    namespace: openbao
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openbao-ui
      port: 8200
  hostnames:
  - openbao.k8sdev.cloud
